--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -343,7 +343,7 @@
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content">
                     <div class="modal-header text-center">
-                        <h5 class="modal-title fas fa-calendar-edit" id="exampleModalLabel"> Immunization Update</h5>
+                        <h5 class="modal-title fw-bold" id="exampleModalLabel"><i class="fas fa-syringe" style="color:#188045"></i> Immunization Update</h5>
                         
                     </div>
                     <div class="modal-body mx-4">
