--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -319,6 +319,8 @@ button.back-button {
  button:hover .button-text {
   color: #fff;
  }
+ 
+
 
 /* Modal Sizing */
 .modal-content{
@@ -331,7 +333,28 @@ button.back-button {
   width: 100vw;
 }
 
+
+/* Change Profile Picture Stylings */
+
+#ps_image-clear{
+  color: green;
+}
+
 /* Parent Home Cards Styling */
+.hoverableImage {
+  transition: .4s ,.4s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.hoverableImage:hover{
+  transition-delay:0.2s;
+  transform: scale(1.5);
+  z-index: 1;
+  box-shadow: 0 0 10px rgba(11, 11, 11, 0.871);
+}
+
+.hoverableImage:hover .body{
+  background-color: rgba(0, 0, 0, 0.212);
+}
 
 .hoverable {
   transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
@@ -1230,7 +1253,10 @@ html {
 
   /* Text Shadow */
   .textShadow{
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: 1px 1px 0 #000;
+  }
+  .textShadow2{
+    text-shadow: 1px 1px 0 rgb(250, 250, 250);
   }
 
   /* Admin Archive Button Styling */
