--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -124,7 +124,7 @@
                     <div class="text-right" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-dark dropdown-header"><i class="fa fa-3x fa-fw fas fa-landmark " style="font-size: 15px; margin-right: 5px;"></i>Barangay</h6>
-                            <select class="form-select " aria-label="Default select example" onchange="javascript:handleNextView(this)">
+                            <select class="form-select" style="cursor: pointer;" aria-label="Default select example" onchange="javascript:handleNextView(this)">
                                 <option value="{% url 'admin_home2' %}">All</option>
                                 {% for barangay in barangays %}
                                 <option value="{% url 'apreschoolersb' barangay.id %}">{{ barangay.brgy_name }}</option>
@@ -182,7 +182,7 @@
                 <div class="modal-content">
                     <div class="modal-header d-flex align-items-center justify-content-between">
                         <div>
-                            <h5 class="modal-title fa fa-archive" id="exampleModalLabel"> Preschooler Archive</h5>
+                            <h5 class="modal-title" id="exampleModalLabel"><i class="fa fa-archive" style="color:#188045;"></i> Preschooler Archive</h5>
                         </div>
                     </div>
                     <div class="modal-body p-0">
