--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -167,7 +167,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header" >
-                    <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel">Add Barangay</h5>
+                    <h5 class="modal-title fw-bold" id="exampleModalLabel"><i class=" fa fa-user-edit" style="color: #188045;"></i> Add Barangay</h5>
                 </div>
                 <div class="modal-body mx-4">
                     <form method="POST">
@@ -184,13 +184,13 @@
                             <label id="user-lbl" data-error="wrong" data-success="right" aria-required="true">Barangay Hall Address: </label>
                             {{ form.brgy_address }}
                         </div>
-                        
-                        <div class="modal-footer" style="justify-content:center">
-                            <button type="submit" class="btn btn-primary" style="background-color: #188045;border-color: #188045;">Add</button>
-                            <button type="button" data-bs-dismiss="modal" style="background-color: red; color: white;" class="btn">Cancel</button>
+                </div>
+                        <div class="modal-footer justify-content-center" >
+                            <button type="button" data-bs-dismiss="modal" style="background-color: red; color: white;min-width: 15%;" class="btn">Cancel</button>
+                            <button type="submit" class="btn btn-primary" style="background-color: #188045;border-color: #188045; min-width: 15%;">Add</button>
                         </div>
                     </form>
-                </div>
+                
             </div>
         </div>
     </div>
