--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -162,9 +162,11 @@
                                 {% endif %}
                                 
                                 {% if preschooler.vaccine_count == 8 %}
-                                    <td style="color: rgb(0, 165, 79);">Complete</td>
+                                    <td class="text-success fw-bold textShadow">Complete</td>
+                                {% elif preschooler.vaccine_count == 0 %}
+                                <td class="text-danger fw-bold textShadow">No Record</td>
                                 {% else %}
-                                    <td>Incomplete</td>
+                                    <td class="text-warning fw-bold textShadow">On Going</td>
                                 {% endif %}
                                 
                                 <td style="text-align: center;">
@@ -185,7 +187,7 @@
             <div class="modal-content">
                 <div class="modal-header d-flex align-items-center justify-content-between">
                     <div>
-                        <h5 class="modal-title fa fa-archive" id="exampleModalLabel"> Preschooler Archive</h5>
+                        <h5 class="modal-title fw-bold" id="exampleModalLabel"> <i class="fa fa-archive" style="color:#188045"></i> Preschooler Archive</h5>
                     </div>
                 </div>
                 <div class="modal-body p-0">
