--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -101,7 +101,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                     <div class="modal-content">
                         <div class="modal-header" >
-                            <h5 class="modal-title fa fa-user-edit mx-2" id="exampleModalLabel">  Enroll Preschooler</h5>
+                            <h5 class="modal-title fw-bold mx-2" id="exampleModalLabel"><i class="fa fa-user-edit" style="color: #188045;"></i> Enroll Preschooler</h5>
                         </div>
                         <div class="modal-body mx-4">
                             <form method="POST">
